# Dynamic-zoning

./: Experimental_data.xlsx  README.md  clear_costmap.sh
navigation_clean/isaac_sim_zone/: CMakeLists.txt  package.xml
navigation_clean/isaac_sim_zone/isaac_ros_navigation_goal/: Control.py  Monitor.py  Solution.py  robot_tasks.py  set_goal.py  test.py
navigation_clean/isaac_sim_zone/isaac_ros_navigation_goal/zone/: Phase_1.py  Phase_2.py  Phase_3.py  ZoneControl.py  create_load_mtx.py  part.py
navigation_clean/isaac_sim_zone/isaac_ros_navigation_goal/zone/data/: SVphistory.csv  carter1dist.csv  carter2dist.csv  cycle_times.csv  part_status.csv  visitedWS.csv  zonehistory.csv
navigation_clean/isaac_sim_zone/isaac_ros_navigation_goal/zone/warehouse_floor/: Bolt Asm^Rack SNL 07-2021-ASM-1.STEP.SLDASM  Bolt Asm^Rack SNL 07-2021-ASM-11.STEP.SLDASM  Bolt Asm^Rack SNL 07-2021-ASM-20.STEP.SLDASM  Bolt Asm^Rack SNL 07-2021-ASM-25.STEP.SLDASM  Bolt Asm^Rack SNL 07-2021-ASM-27.STEP.SLDASM  Bolt Asm^Rack SNL 07-2021-ASM-33.STEP.SLDASM  Bolt Asm^Rack SNL 07-2021-ASM-4.STEP.SLDASM  Bolt Asm^Rack SNL 07-2021-ASM-46.STEP.SLDASM  Bolt Asm^Rack SNL 07-2021-ASM-6.STEP.SLDASM  Floor - ModularRack-1 Modular Rack HAndry.STEP-1 1665 Ledger.STEP-10.STL  Floor - ModularRack-1 Modular Rack HAndry.STEP-1 1665 Ledger.STEP-11.STL  Floor - ModularRack-1 Modular Rack HAndry.STEP-1 1665 Ledger.STEP-3.STL  Floor - ModularRack-1 Modular Rack HAndry.STEP-1 1665 Ledger.STEP-8.STL  Floor - ModularRack-1 Modular Rack HAndry.STEP-1 Board.STEP-1.STL  Floor - ModularRack-1 Modular Rack HAndry.STEP-1 Board.STEP-5.STL  Floor - ModularRack-10 Modular Rack HAndry.STEP-1 1665 Ledger.STEP-3.STL  Floor - ModularRack-10 Modular Rack HAndry.STEP-1 1665 Ledger.STEP-4.STL  Floor - ModularRack-10 Modular Rack HAndry.STEP-1 Board.STEP-1.STL  Floor - ModularRack-101 Modular Rack HAndry.STEP-1 1665 Ledger.STEP-7.STL  (+953 more)
navigation_clean/isaac_sim_zone/launch/: isaac_sim_zone.launch
(+4487 files in other folders)
